# ocloc

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: ocloc.rb
assets/: languages.json
documentation/: HOMEBREW_TAP_SETUP.md  PLAN1.md  PLAN2.md
scripts/: benchmark-custom.sh  benchmark-large.sh  benchmark-small.sh  bump-version.sh  install-git-hooks.sh  pre-commit  pre-push  print-sha256.sh
src/: analyzer.rs  cli.rs  languages.rs  lib.rs  main.rs  traversal.rs  types.rs  types_diff.rs  vcs.rs
src/cli/: run_impl.rs  sub_diff.rs
src/formatters/: csv.rs  mod.rs  table.rs
tests/: diff_mode.rs  diff_rename.rs  diff_staged_worktree.rs  integration_simple.rs  output_formats.rs  shebang_detection.rs
tests/fixtures/simple_repo/: b.py
