[package]
name = "ocloc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
indicatif = "0.17"
indexmap = { version = "2.6", features = ["serde"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.12"
