[package]
name = "ocloc"
version = "0.5.1"
edition = "2024"
description = "Fast, reliable lines-of-code counter with JSON/CSV output"
license = "MIT"
repository = "https://github.com/adhishthite/ocloc"
readme = "README.md"
rust-version = "1.85"
homepage = "https://github.com/adhishthite/ocloc"
documentation = "https://docs.rs/ocloc"
keywords = ["cloc", "loc", "code", "metrics", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
indexmap = { version = "2.6", features = ["serde"] }
once_cell = "1.19"
chrono = "0.4"
git2 = { version = "0.18", features = ["vendored-libgit2"] }
memchr = "2"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
